work correctly all methods without update book and update author
